--- a/template/template.html
+++ b/template/template.html
@@ -2,19 +2,8 @@
   <head>
     <style>
       #body {
-        border-collapse: collapse;
-        border-spacing: 0;
-        padding: 0;
-        text-align: left;
-        vertical-align: top;
-        height: 100%;
-        width: 100%;
-        color: #0a0a0a;
-        font-family: "Bookerly", Georgia, serif;
-        font-weight: normal;
-        line-height: 1.3;
-        margin: 0;
-        font-size: 16px;
+        font-family: "Quicksand", Helvetica, serif;
+        line-height: 1.4;
         margin-left: auto;
         margin-right: auto;
         max-width: 80%;
